# MEDS_trajectory_evaluation

./: .pre-commit-config.yaml  CITATION.cff  README.md  conftest.py  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality-pr.yaml  python-build.yaml  tests.yaml
src/MEDS_trajectory_evaluation/: __init__.py  aces_utils.py  schema.py
src/MEDS_trajectory_evaluation/ACES_config_evaluation/: __init__.py  __main__.py  aggregate.py  label.py  task_config.py  utils.py
src/MEDS_trajectory_evaluation/ACES_config_evaluation/configs/: _aggregate.yaml
src/MEDS_trajectory_evaluation/temporal_AUC_evaluation/: __init__.py  get_ttes.py  temporal_AUCS.py  trajectory_AUC.py
src/zeroshot_ACES/: __main__.py  aces_utils.py  label.py  predict.py  specs.py  task_config.py  utils.py
src/zeroshot_ACES/ACES_config_evaluation/: __main__.py
src/zeroshot_ACES/configs/: _predict.yaml
src/zeroshot_ACES/temporal_AUC_evaluation/: get_ttes.py  temporal_AUCS.py
tests/: helpers.py  test_aggregate.py  test_auc.py  test_bugs.py  test_censoring.py  test_get_ttes.py  test_label.py  test_predict.py  test_task_config.py  test_temporal_workflow.py  test_utils.py
tests/temporal_auc/: helpers.py  test_auc.py  test_get_ttes.py  test_utils.py
